[package]
name = "shadow"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "Index, manage, and upload a directory structure to cloud."
readme = "https://github.com/byhowe/shadow/blob/development/README.md"
homepage = "https://github.com/byhowe/shadow"
repository = "https://github.com/byhowe/shadow.git"
license = "MIT"

[lib]
name = "shadow"
path = "src/lib.rs"

[[bin]]
name = "shadow"
path = "shadow/main.rs"

[build-dependencies]
cc = "1.0"
bindgen = "0.62"
pkg-config = "0.3"
